[gd_scene load_steps=17 format=3 uid="uid://cukv53bq4is1j"]

[ext_resource type="Texture2D" uid="uid://c3i44cv0hagnu" path="res://assets/cards/card_texture/basic_card_sheet.png" id="1_pf251"]
[ext_resource type="Script" uid="uid://y0ddvikqkeu8" path="res://cards/collectible_card.gd" id="1_svpus"]
[ext_resource type="Texture2D" uid="uid://bf2k3ydq5y33w" path="res://assets/cards/suits/melee_attack.png" id="3_lgfln"]
[ext_resource type="FontFile" uid="uid://yej5vxj50iqs" path="res://assets/font/m5x7.ttf" id="3_svpus"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lakw3"]
atlas = ExtResource("1_pf251")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_pm21f"]
atlas = ExtResource("1_pf251")
region = Rect2(16, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lf6f"]
atlas = ExtResource("1_pf251")
region = Rect2(32, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_7iits"]
atlas = ExtResource("1_pf251")
region = Rect2(48, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oo54l"]
atlas = ExtResource("1_pf251")
region = Rect2(64, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpybi"]
atlas = ExtResource("1_pf251")
region = Rect2(80, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctatt"]
atlas = ExtResource("1_pf251")
region = Rect2(96, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgqkh"]
atlas = ExtResource("1_pf251")
region = Rect2(112, 0, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_efswn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lakw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pm21f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lf6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7iits")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oo54l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpybi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctatt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgqkh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_et2dc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.2, 0.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_n2tmg"]
resource_name = "reveal_card"
length = 1.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1), Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -4.76837e-07), Vector2(0, -20), Vector2(0, -20), Vector2(0, -24)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_et2dc"]
_data = {
&"RESET": SubResource("Animation_et2dc"),
&"reveal_collectible": SubResource("Animation_n2tmg")
}

[node name="CardCollectible" type="Node2D"]
script = ExtResource("1_svpus")

[node name="CardSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
scale = Vector2(0.2, 0.2)
sprite_frames = SubResource("SpriteFrames_efswn")

[node name="CardSuitSprite" type="Sprite2D" parent="CardSprite"]
position = Vector2(0, -4)
texture = ExtResource("3_lgfln")

[node name="CardPower" type="Label" parent="CardSprite"]
offset_left = -6.0
offset_top = -2.0
offset_right = 8.0
offset_bottom = 11.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_svpus")
theme_override_font_sizes/font_size = 16
text = "6"
horizontal_alignment = 1

[node name="CollectibleAnimations" type="AnimationPlayer" parent="."]
root_node = NodePath("../CardSprite")
libraries = {
&"": SubResource("AnimationLibrary_et2dc")
}

[connection signal="animation_finished" from="CollectibleAnimations" to="CardSprite" method="_on_collectible_animations_animation_finished"]
